[project]
name = "content-builder-agent"
version = "0.1.0"
description = "Deep Agents content builder with a dynamic Vue demo console."
requires-python = ">=3.11,<3.12"
dependencies = [
  "deepagents>=0.5.8,<0.6",
  "langgraph>=1.1,<2",
  "langchain>=1,<2",
  "langchain-core>=1,<2",
  "langchain-qwq>=0.3.4,<0.4",
  "langgraph-cli[inmem]>=0.4.26,<0.5",
  "langgraph-api==0.8.6",
  "fastapi>=0.115,<1",
  "uvicorn>=0.30,<1",
  "pyyaml>=6,<7",
  "tavily-python>=0.7,<1",
  "dashscope>=1.20,<2",
]

[tool.setuptools]
packages = ["content_builder", "content_builder.tools"]
